--- a/User/Templates/User/Product.html
+++ b/User/Templates/User/Product.html
@@ -225,7 +225,7 @@
             return this.value.trim();
         }).get();
         console.log(selectedCategories);
-        
+        //Chnages
         // Send the selected values as a comma-separated string or array to your server
         var ur = $("#productform").attr("data-subcat-url");
         $.ajax({
